Removed fixed heights floats overflow hidden from nav

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,6 @@ a {
 }
 
 #header {
-    height: 150px;
     margin: 0 auto;
     padding: 0 0;
 }
@@ -64,7 +63,6 @@ a {
 /* Logo */
 
 #logo {
-    float: left;
     width: 300px;
     margin: 0;
     padding: 0;
@@ -105,27 +103,19 @@ a {
 /* Menu */
 
 #menu {
-    width: 500px;
-    height: 90px;
     margin: 0 auto;
     padding: 0;
 }
 
 #menu ul {
-    float: right;
     margin: 0;
-    padding: 20px 0 0 0;
+    padding: 20px 0;
     list-style: none;
     line-height: normal;
 }
 
-#menu li {
-    float: left;
-}
-
 #menu a {
     display: block;
-    line-height: 100px;
     margin-right: 1px;
     padding: 0 20px 0 20px;
     text-decoration: none;
